shortcut "." and "," for changing pivot center don't work on Graph Editor #42661

Closed
opened 2014-11-20 12:51:49 +01:00 by Sarah Laufer · 7 comments

System Information
Xubuntu, Quadro FX 1700

Blender Version
Broken: 2.72 3102ced
Worked: (optional)

Short description of error
shortcuts "." and "," for changing pivot center from bounding box mode to cursor mode on the current selection, work fine on 3d view, but are not set for the graph editor.

Exact steps for others to reproduce the error
select al curve points, press ".", nothing happens. pivot center mode should change to cursor mode.
pivot_bug_report.blend

**System Information** Xubuntu, Quadro FX 1700 **Blender Version** Broken: 2.72 3102ced Worked: (optional) **Short description of error** shortcuts "." and "," for changing pivot center from bounding box mode to cursor mode on the current selection, work fine on 3d view, but are not set for the graph editor. **Exact steps for others to reproduce the error** select al curve points, press ".", nothing happens. pivot center mode should change to cursor mode. [pivot_bug_report.blend](https://archive.blender.org/developer/F125017/pivot_bug_report.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Joshua Leung was assigned by Sarah Laufer 2014-11-20 12:51:49 +01:00
Author

Added subscriber: @feldlaufer-4

Added subscriber: @feldlaufer-4

This issue was referenced by 50c667372e

This issue was referenced by 50c667372eb8685f85417f8c3826ab6ec8b9dfbd
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 50c667372e.

Closed by commit 50c667372e.

This issue was referenced by bbe68ddf7ecf2088adc6e20e73c248c5f360d197

This issue was referenced by bbe68ddf7ecf2088adc6e20e73c248c5f360d197

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883

This issue was referenced by a73b6c8d236d1b68dd80a748eeaed53d08f5a883
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42661
No description provided.