Bugfix T42661: shortcut "." and "," for changing pivot center don't work on Graph Editor